--- a/stray-kids.html
+++ b/stray-kids.html
@@ -216,7 +216,7 @@
           <div class="row">
             <div class="col-md-4 my-2">
               <div class="card">
-                <img src="stray kids/bang chan.png" class="card-img-top px-4 pt-4" alt="Bang Chan">
+                <img src="stray-kids/bang chan.png" class="card-img-top px-4 pt-4" alt="Bang Chan">
                 <div class="card-body">
                   <h5 class="card-title">Bang Chan</h5>
                   <p>
@@ -240,7 +240,7 @@
             </div>
             <div class="col-md-4 my-2">
               <div class="card">
-                <img src="stray kids/lee know.png" class="card-img-top px-4 pt-4" alt="Lee Know">
+                <img src="stray-kids/lee know.png" class="card-img-top px-4 pt-4" alt="Lee Know">
                 <div class="card-body">
                   <h5 class="card-title">Lee Know</h5>
                   <p>
@@ -263,7 +263,7 @@
             </div>
             <div class="col-md-4 my-2">
               <div class="card">
-                <img src="stray kids/changbin.png" class="card-img-top px-4 pt-4" alt="Changbin">
+                <img src="stray-kids/changbin.png" class="card-img-top px-4 pt-4" alt="Changbin">
                 <div class="card-body">
                   <h5 class="card-title">Changbin</h5>
                   <p>
@@ -286,7 +286,7 @@
             </div>
             <div class="col-md-4 my-2">
               <div class="card">
-                <img src="stray kids/hyunjin.png" class="card-img-top px-4 pt-4" alt="Hyunjin">
+                <img src="stray-kids/hyunjin.png" class="card-img-top px-4 pt-4" alt="Hyunjin">
                 <div class="card-body">
                   <h5 class="card-title">Hyunjin</h5>
                   <p>
@@ -309,7 +309,7 @@
             </div>
             <div class="col-md-4 my-2">
               <div class="card">
-                <img src="stray kids/han.png" class="card-img-top px-4 pt-4" alt="Han">
+                <img src="stray-kids/han.png" class="card-img-top px-4 pt-4" alt="Han">
                 <div class="card-body">
                   <h5 class="card-title">Han</h5>
                   <p>
@@ -332,7 +332,7 @@
             </div>
             <div class="col-md-4 my-2">
               <div class="card">
-                <img src="stray kids/felix.png" class="card-img-top px-4 pt-4" alt="Felix">
+                <img src="stray-kids/felix.png" class="card-img-top px-4 pt-4" alt="Felix">
                 <div class="card-body">
                   <h5 class="card-title">Felix</h5>
                   <p>
@@ -356,7 +356,7 @@
             </div>
             <div class="col-md-4 my-2">
               <div class="card">
-                <img src="stray kids/seungmin.png" class="card-img-top px-4 pt-4" alt="Seungmin">
+                <img src="stray-kids/seungmin.png" class="card-img-top px-4 pt-4" alt="Seungmin">
                 <div class="card-body">
                   <h5 class="card-title">Seungmin</h5>
                   <p>
@@ -379,7 +379,7 @@
             </div>
             <div class="col-md-4 my-2">
               <div class="card">
-                <img src="stray kids/jeongin.png" class="card-img-top px-4 pt-4" alt="Jeongin">
+                <img src="stray-kids/jeongin.png" class="card-img-top px-4 pt-4" alt="Jeongin">
                 <div class="card-body">
                   <h5 class="card-title">I.N</h5>
                   <p>
