--- a/le-sserafim.html
+++ b/le-sserafim.html
@@ -281,7 +281,7 @@
             </div>
             <div class="col-md-4 my-2">
               <div class="card">
-                <img src="le-sserafim/Kazuha.png" class="card-img-top px-4 pt-4" alt="Kazuha">
+                <img src="le-sserafim/kazuha.png" class="card-img-top px-4 pt-4" alt="Kazuha">
                 <div class="card-body">
                   <h5 class="card-title">Kazuha</h5>
                   <p>
