--- a/aespa.html
+++ b/aespa.html
@@ -153,7 +153,7 @@
           
           <!-- Latest Updates -->
           <li class="mb-3">
-            <a href="index.html#latest-updates" class="text-decoration-none text-white fw-bold">Latest Updates</a>
+            <a href="latest-updates.html" class="text-decoration-none text-white fw-bold">Latest Updates</a>
           </li>
           
           <!-- Interaction Corner -->
@@ -183,7 +183,7 @@
             <ul class="navbar-nav w-100 justify-content-around">
                 <li class="nav-item"><a class="nav-link text-center" href="index.html#hero">Featured Groups</a></li>
               <li class="nav-item"><a class="nav-link text-center" href="fanart-fancam.html">Fanart & Fancam Collections</a></li>
-              <li class="nav-item"><a class="nav-link text-center" href="index.html#latest-updates">Latest Updates</a></li>
+              <li class="nav-item"><a class="nav-link text-center" href="latest-updates.html">Latest Updates</a></li>
               <li class="nav-item"><a class="nav-link text-center" href="interaction-corner.html">Interaction Corner</a></li>
                 <li class="nav-item"><a class="nav-link text-center" href="about.html">About Us</a></li>
             </ul>
