--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
           
           <!-- Latest Updates -->
           <li class="mb-3">
-            <a href="index.html#latest-updates" class="text-decoration-none text-white fw-bold">Latest Updates</a>
+            <a href="latest-updates.html" class="text-decoration-none text-white fw-bold">Latest Updates</a>
           </li>
           
           <!-- Interaction Corner -->
@@ -188,7 +188,7 @@
             <ul class="navbar-nav w-100 justify-content-around">
                 <li class="nav-item"><a class="nav-link text-center" href="index.html#hero">Featured Groups</a></li>
               <li class="nav-item"><a class="nav-link text-center" href="fanart-fancam.html">Fanart & Fancam Collections</a></li>
-              <li class="nav-item"><a class="nav-link text-center" href="index.html#latest-updates">Latest Updates</a></li>
+              <li class="nav-item"><a class="nav-link text-center" href="latest-updates.html">Latest Updates</a></li>
               <li class="nav-item"><a class="nav-link text-center" href="interaction-corner.html">Interaction Corner</a></li>
                 <li class="nav-item"><a class="nav-link text-center" href="about.html">About Us</a></li>
             </ul>
@@ -333,6 +333,9 @@
                 <a href="https://twitter.com/le_sserafim/status/1876554368947982500?ref_src=twsrc%5Etfw">January 7, 2025</a>
             </blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
           </div>
+          <a href="latest-updates.html" id="start-quiz" class="btn btn-primary mt-2">
+            Read More
+          </a>          
         </div>
       </section>
   
