--- a/fanart-fancam.html
+++ b/fanart-fancam.html
@@ -168,7 +168,7 @@
           
           <!-- Latest Updates -->
           <li class="mb-3">
-            <a href="index.html#latest-updates" class="text-decoration-none text-white fw-bold">Latest Updates</a>
+            <a href="latest-updates.html" class="text-decoration-none text-white fw-bold">Latest Updates</a>
           </li>
           
           <!-- Interaction Corner -->
@@ -198,7 +198,7 @@
             <ul class="navbar-nav w-100 justify-content-around">
                 <li class="nav-item"><a class="nav-link text-center" href="index.html#hero">Featured Groups</a></li>
               <li class="nav-item"><a class="nav-link text-center" href="fanart-fancam.html">Fanart & Fancam Collections</a></li>
-              <li class="nav-item"><a class="nav-link text-center" href="index.html#latest-updates">Latest Updates</a></li>
+              <li class="nav-item"><a class="nav-link text-center" href="latest-updates.html">Latest Updates</a></li>
               <li class="nav-item"><a class="nav-link text-center" href="interaction-corner.html">Interaction Corner</a></li>
                 <li class="nav-item"><a class="nav-link text-center" href="about.html">About Us</a></li>
             </ul>
@@ -233,15 +233,15 @@
             <img src="fancam/han.PNG" class="img-fluid" alt="Han">
             <img src="fancam/felix.PNG" class="img-fluid" alt="Felix">
             <img src="fancam/leeknow.PNG" class="img-fluid" alt="Lee Know">
-            <img src="fancam/IMG_6466.JPG" class="img-fluid" alt="Giselle" style="height: 800px; object-fit: cover;">
-            <img src="fancam/IMG_6467.JPG" class="img-fluid" alt="Giselle" style="height: 800px; object-fit: cover;">
-            <img src="fancam/IMG_6468.JPG" class="img-fluid" alt="Karina" style="height: 800px; object-fit: cover;">
-            <img src="fancam/IMG_6469.JPG" class="img-fluid" alt="Winter" style="height: 800px; object-fit: cover;">
-            <img src="fancam/IMG_6470.JPG" class="img-fluid" alt="Winter" style="height: 800px; object-fit: cover;">
-            <img src="fancam/IMG_6471.JPG" class="img-fluid" alt="Karina" style="height: 800px; object-fit: cover;">
-            <img src="fancam/IMG_6472.JPG" class="img-fluid" alt="Giselle" style="height: 800px; object-fit: cover;">
-            <img src="fancam/IMG_6473.JPG" class="img-fluid" alt="Karina" style="height: 800px; object-fit: cover;">
-            <img src="fancam/IMG_6474.JPG" class="img-fluid" alt="NingNing" style="height: 800px; object-fit: cover;">
+            <img src="fancam/IMG_6466.JPG" class="img-fluid" alt="Giselle"">
+            <img src="fancam/IMG_6467.JPG" class="img-fluid" alt="Giselle">
+            <img src="fancam/IMG_6468.JPG" class="img-fluid" alt="Karina">
+            <img src="fancam/IMG_6469.JPG" class="img-fluid" alt="Winter">
+            <img src="fancam/IMG_6470.JPG" class="img-fluid" alt="Winter">
+            <img src="fancam/IMG_6471.JPG" class="img-fluid" alt="Karina">
+            <img src="fancam/IMG_6472.JPG" class="img-fluid" alt="Giselle">
+            <img src="fancam/IMG_6473.JPG" class="img-fluid" alt="Karina">
+            <img src="fancam/IMG_6474.JPG" class="img-fluid" alt="NingNing">
           </div>
           <h2>Videos</h2>
           <div class="d-grid gap-3" style="grid-template-columns: repeat(3, 1fr);">
